# Music-Tool

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  auth.py  db.py  job_queue.py  main.py  pyproject.toml  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 7bc48242348d_add_processing_ms_to_jobs.py  b8a3d6fdff1c_add_user_id_to_jobs.py  e451f6e778b9_create_jobs_table.py
apps/api/audio/: demucs.py  mixer.py  modal_separation.py
apps/api/models/: job.py
apps/api/routes/: export.py  jobs.py  stems.py  upload.py
apps/api/services/: jobs.py
apps/api/storage/: supabase_storage.py
apps/api/workers/: separation.py
apps/web/: .env.example  package.json  tsconfig.app.json
apps/web/src/: App.tsx
apps/web/src/lib/: api.ts
openspec/: config.yaml
openspec/changes/archive/2026-05-23-audio-upload/: design.md  proposal.md  tasks.md
openspec/changes/auth/: tasks.md
openspec/changes/cloud-storage/: tasks.md
openspec/changes/modal-gpu-worker/: design.md  proposal.md  tasks.md
openspec/changes/performance/: design.md  tasks.md
openspec/changes/railway-deploy/: design.md  proposal.md  tasks.md
openspec/specs/audio-upload/: spec.md
openspec/specs/demucs-config/: spec.md
openspec/specs/job-persistence/: spec.md
openspec/specs/job-queue/: spec.md
openspec/specs/monorepo-foundation/: spec.md
openspec/specs/stem-export/: spec.md
openspec/specs/stem-mixer/: spec.md
openspec/specs/stem-separation/: spec.md
openspec/specs/user-auth/: spec.md
(+55 files in other folders)
