[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "music-tool-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "demucs>=4.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
]

[tool.setuptools.packages.find]
where = ["."]
