[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "music-tool-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "demucs>=4.0",
    "pydub>=0.25",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "rq>=1.16",
    "redis>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
